--- a/songlibrary.css
+++ b/songlibrary.css
@@ -1,14 +1,10 @@
-.song-library-container{
-  width: 260px;
-  height: 250px;
-  border: 1px solid black;
-  margin: auto;
-  background: #3e3224;
-position: relative;
-display: flex;
-justify-content: center;
-
-
+.song-library-container {
+    width: 310px;
+    background: rgb(62, 50, 36);
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    border-radius: 5px;
 }
 
 .song-library{
@@ -17,26 +13,37 @@ justify-content: center;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-
+    background-position: center;
+    flex-direction: column;
 }
 
-#song-list{
-  background: white;
-  width: 100%;
-  height: 70%;
-  rows: 4;
-  columns: 50;
-  resize: none;
+
+
+ #song-list {
+    margin-bottom: 15px;
+    font-size: 18px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    display: flex;
+    background-color: #291b07;
+}
+​
+
+#song-list option {
+    color: black;
 }
 
-.song-play-bar{
-  width: 100%;
-  height: 30%;
-  margin: auto;
-  border: 1px solid green;
-  color: white;
-  bottom: 0;
-  display: flex;
+option:checked {
+  color: #222;
+    box-shadow: 0 0 10px 100px #ffffff inset;
+}
+
+
+.song-play-bar {
+    margin-bottom: 15px;
+    display: flex;
+    JUSTIFY-CONTENT: space-between;
 }
 
  .hide{
@@ -49,36 +56,57 @@ justify-content: center;
   color: white;
 }
 
-#play-song-button{
-  width: 25%;
-  height: 100%;
-  background: green;
+#play-song-button {
+    height: 100%;
+    padding: 5px 15px;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    font-weight: 800;
+    font-size: 14px;
+    background-color: #25090d;
 }
 
-#stop-song-button{
-  width: 25%;
-  height: 100%;
-  background: maroon;
+#stop-song-button {
+    height: 100%;
+    padding: 5px 15px;
+    color: white;
+    font-weight: 800;
+    font-size: 14px;
+    border: none;
+    border-radius: 3px;
+    background-color: #25090d;
 }
 
-#next-song-button{
-  width: 25%;
-  height: 100%;
-  color: black;
-  background:white;
-  border: 1px solid black;
-  font-weight: 800;
-  font-size: 14px;
+#next-song-button {
+    color: white;
+    font-weight: 800;
+    font-size: 14px;
+    padding: 5px 15px;
+    border: none;
+    border-radius: 3px;
+    background-color: #25090d;
 }
 
-#prev-song-button{
-  width: 25%;
-  height: 100%;
-  color: black;
-background:white;
-  border: 1px solid black;
-  font-weight: 800;
-  font-size: 14px;
+#prev-song-button {
+    color: white;
+    font-weight: 800;
+    font-size: 14px;
+    padding: 5px 15px;
+    border: none;
+    border-radius: 3px;
+    background-color: #25090d;
 }
+​
+
+
+
+
+
+
+
+
+
+
 
 
