created settings form

--- a/nav.css
+++ b/nav.css
@@ -4,9 +4,19 @@ body {
 background-image: url('./background.jpeg');
 }
 .navbar{
-  max-width: 1100px;
-  margin:auto;
-  background-image: url(https://firebasestorage.googleapis.com/v0/b/mandolin-a1ce1.appspot.com/o/mandolinwood.png?alt=media&token=0f2e1fbf-e7e6-4ed4-bedf-70c8f83e7ca5);
+max-width: 1100px;
+ 
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+}
+
+.navbar-container{
+    width: 100%;
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/mandolin-a1ce1.appspot.com/o/mandolinwood.png?alt=media&token=0f2e1fbf-e7e6-4ed4-bedf-70c8f83e7ca5);
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .navbar ul{ 
@@ -17,6 +27,13 @@ background-image: url('./background.jpeg');
   text-decoration: none;
   list-style-type: none;
 }
+
+.disable-drag{
+    pointer-events: none;
+    background-color: blue;
+    width: 2000px;
+}
+
 
 
 .navbar li a{
@@ -51,12 +68,14 @@ margin-left: 20px;
   display: none;
 }
 
-
-#invisible-box{
-  opacity: 1;
-  width: 100%;
-  height: 100%;
+span{
+      color: white;
+    font-size: smaller;
+    margin: auto;
+    margin-top: 10px;
 }
+
+
 
 h3{
     color: white;
@@ -65,3 +84,15 @@ h3{
 }
 
 
+button{ /* button styles for recording and song playback containers */
+
+    padding: 5px 15px;
+    color: white;
+    font-weight: 800;
+    font-size: 14px;
+    border: none;
+    border-radius: 3px;
+    background-color: #25090d;
+}
+
+πnav
