--- a/recordingform.css
+++ b/recordingform.css
@@ -1,24 +1,54 @@
 
 
 .recording-form-container{
-width: 400px;
-    height: 400px;
-    border: 1px solid black;
-    position: relative;
+    height: 340px;
+    align-items: center;
+    position: absolute;
+    z-index: 9;
+    background-color: #f1f1f1;
+    background: rgb(62, 50, 36);
+    width: 310px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    background: #3e3224;
-    padding-top: 20px;
-    margin: auto;
-    right: 136px;
-    z-index: 20;
+    border-radius: 5px;
+    text-align: center;
+    width: 290px;
+    height: 299px;
+    /* box-shadow: 0px 1px 11px 0.2px #9b9b9b; */
 }
 
+.recording-form-container-header{
+
+height: 360px;
+    align-items: center;
+    position: absolute;
+    z-index: 9;
+    background-color: #f1f1f1;
+    border: 1px solid #d3d3d3;
+    background: rgb(62, 50, 36);
+    width: 310px;
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+    text-align: center;
+}
+
+h5{
+margin: auto;
+
+    width: 100%;
+    height: 20%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-weight: 800;
+    font-size: 20px;
+   
+}
 .recording-form{
   width: 80%;
   height: 80%;
-  /* border: 1px solid red; */
   margin: auto;
   align-items: center;
   position: absolute;
@@ -26,56 +56,43 @@ width: 400px;
 }
 
 .volume{
-  width: 100%;
- /* border: 1px solid orange; */
- margin: auto;
- display: flex;
- padding: 6px;
-
+     width: 100%;
+    margin: left;
+    margin-left: 25px;
+    font-size: 20px;
+    margin-top: -1px;
 }
 
 .controls{
-  width: 100%;
-  height: 100%;
-  /* border: 1px solid blue; */
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-#record{
-  width: 33%;
-  height: 20%;
-  background: rgb(167, 13, 13);
-  color: white;
-}
-#stop{
-    width: 33%;
-    height: 20%;
-    background:rgb(20, 21, 0);
-    color: white;
 
+
+.recording-buttons{
+  border: 1px solid white;
 }
 
-#save{
-width: 33%;
-height: 20%;
-color: white;
-background: green;
-}
+
+
 
 #song-title{
-height: 15%;;
-width: 100%;
-text-align: center;
-
+    height: 15%;
+    width: 80%;
+    text-align: center;
+    
 
 }
 
 #song-artist{
-  height: 15%;;
-  width: 100%;
-  text-align: center;
+height: 15%;
+    width: 80%;
+    text-align: center;
  
   }
 
