--- a/settingsform.css
+++ b/settingsform.css
@@ -17,24 +17,24 @@
     /* box-shadow: 0px 1px 11px 0.2px #9b9b9b; */
 }
 
-.settings-form-container-header{
-
-height: 360px;
-    align-items: center;
-    position: absolute;
-    z-index: 9;
-    background-color: #f1f1f1;
-    border: 1px solid #d3d3d3;
-    background: rgb(62, 50, 36);
-    width: 310px;
-    display: flex;
-    justify-content: center;
-    border-radius: 5px;
-    text-align: center;
-
+#settings-form-container-header{
+     padding: 20px;
+    border: 1px solid #444;
+    width: 100%;
+ 
+    margin-top: -23px;
 }
 
+ #settings-volume-slider{
+     padding: 0;
+    margin: auto;
+}
 
+.settings-volume{
+    width: 100%;
+    font-size: 20px;
+    margin-top: -1px;
+}
 
 .settings-form{
     width: 80%;
@@ -44,4 +44,20 @@ height: 360px;
     position: absolute;
     display: flex;
     flex-direction: column;
+}
+
+
+ .hide{
+  display: none;
+}
+
+
+input[type="checkbox" i] {
+    margin-top: 20px;
+    color: white;
+}
+
+
+li{
+    color: white;
 }
