--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
 .fretboard {
   background-image: url("https://firebasestorage.googleapis.com/v0/b/mandolin-a1ce1.appspot.com/o/mandolinwood.png?alt=media&token=0f2e1fbf-e7e6-4ed4-bedf-70c8f83e7ca5");
      width: 150%;
-    margin: auto;
+
     height: 260px;
     flex-direction: column;
     border: 4px solid rgb(48, 48, 35);
@@ -48,10 +48,17 @@ body {
     text-align: center;
     position: absolute;
     bottom: 0;
-    top: 20px;
+    top: 70px;
     box-shadow: cadetblue;
     box-shadow: 0px 0px 52px 3px black;
     margin-left: -200px;
+    animation-name:reveal;
+    animation-duration: 1s;
+}
+
+@keyframes reveal{
+  from {opacity:0;}
+  to {opacity:1;}
 }
 
 .row {
@@ -169,5 +176,16 @@ border-radius: 900px;
 }
 
 
+
+
+
+button:active{
+
+background: #40110f;
+   
+    z-index: 9;
+    text-align: center;
+
+}
 
 
