--- a/settingsform.css
+++ b/settingsform.css
@@ -17,11 +17,22 @@
     /* box-shadow: 0px 1px 11px 0.2px #9b9b9b; */
 }
 
+#settings-form__close{
+  position: absolute;
+    left: 0;
+    padding: 20px;
+    top: 0;
+    font-size: 20px;
+    margin: auto;
+    color: white;
+    cursor: pointer;
+    z-index: 40;
+}
+
 #settings-form-container-header{
      padding: 20px;
-    border: 1px solid #444;
+    /* border: 1px solid #444; */
     width: 100%;
- 
     margin-top: -23px;
 }
 
