--- a/recordingform.css
+++ b/recordingform.css
@@ -14,6 +14,11 @@
     text-align: center;
     width: 290px;
     height: 299px;
+
+    z-index: 40;
+    top: 143px;
+    left: 87px;
+    border: 1px solid navajowhite;
     /* box-shadow: 0px 1px 11px 0.2px #9b9b9b; */
 }
 
