--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.background{
+.background {
   position: absolute;
   margin: auto;
   z-index: -1;
@@ -7,17 +7,17 @@
   top: -100px;
 }
 
-button{
- outline: none;
+button {
+  outline: none;
 }
 
 .all {
-    font-family: sans-serif;
-    width: 700px;
-    /* border: 1px solid orange; */
-    position: relative;
-    top: 300px;
-    margin: auto;
+  font-family: sans-serif;
+  width: 700px;
+  /* border: 1px solid orange; */
+  position: relative;
+  top: 300px;
+  margin: auto;
 }
 
 .note-mode {
@@ -36,27 +36,31 @@ body {
 
 .fretboard {
   background-image: url("https://firebasestorage.googleapis.com/v0/b/mandolin-a1ce1.appspot.com/o/mandolinwood.png?alt=media&token=0f2e1fbf-e7e6-4ed4-bedf-70c8f83e7ca5");
-     width: 150%;
-    height: 260px;
-    flex-direction: column;
-    border: 4px solid rgb(48, 48, 35);
-    border-radius: 2px;
-    border-left: 20px solid rgb(114, 78, 12);
-    margin-left: 0px;
-    text-align: center; 
-    position: absolute;
-    bottom: 0;
-    top: 70px;
-    box-shadow: cadetblue;
-    box-shadow: 0px 0px 52px 3px black;
-    margin-left: -200px;
-    animation-name:reveal;
-    animation-duration: 1s;
+  width: 150%;
+  height: 260px;
+  flex-direction: column;
+  border: 4px solid rgb(48, 48, 35);
+  border-radius: 2px;
+  border-left: 20px solid rgb(114, 78, 12);
+  margin-left: 0px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  top: 70px;
+  box-shadow: cadetblue;
+  box-shadow: 0px 0px 52px 3px black;
+  margin-left: -200px;
+  animation-name: reveal;
+  animation-duration: 1s;
 }
 
-@keyframes reveal{
-  from {opacity:0;}
-  to {opacity:1;}
+@keyframes reveal {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .row {
@@ -78,9 +82,8 @@ body {
   color: black;
 }
 
-
-
-.note { /* ACCIDENTALLU REVERSED NOTE PRESSED CLASSNAME!*/
+.note {
+  /* ACCIDENTALLU REVERSED NOTE PRESSED CLASSNAME!*/
   width: 20px;
   padding: 10px;
   width: 20px;
@@ -91,54 +94,31 @@ body {
     0 1px 0 rgba(255, 255, 255, 0.075);
   box-shadow: inset 0 1px 3px rgba(50, 0, 0, 0.05),
     0 1px 0 rgba(255, 255, 255, 0.075);
-
 }
 
-
-
-
-.note:hover {
-  width: 20px;
-  padding: 10px;
-  border-radius: 20px;
-  background: rgb(129, 139, 129);
-  -webkit-box-shadow: inset 60 1px 3px rgba(0, 0, 0, 0.05),
-    0 1px 0 rgba(255, 255, 255, 0.075);
-  box-shadow: inset 0 1px 3px #3200000d,
-    0 1px 0 rgba(255, 255, 255, 0.075);
-        -webkit-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
--moz-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
-}
-
-@-webkit-keyframes notepress{
-0% {
-  -webkit-box-shadow: 0px 0px 15px 5px rgba(100, 255, 190, .75);
-}
-20%{
-    -webkit-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
-
-}
+@-webkit-keyframes notepress {
+  0% {
+    -webkit-box-shadow: 0px 0px 15px 5px rgba(100, 255, 190, 0.75);
+  }
+  20% {
+    -webkit-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, 0.75);
+  }
 }
 
 .note-pressed {
   border-radius: 900px;
-    background-color: white;
-    box-shadow: 3px 2px;
-    z-index: 9;
-    text-align: center;
-    border: 8px solid white;
-    -webkit-animation-name: notepress;
-    -webkit-animation-duration: 2s;
-    animation-name: notepress;
-    animation-duration: 0.5s;
-    font-size: 20px;
-    FONT-WEIGHT: 800;
-
+  background-color: white;
+  box-shadow: 3px 2px;
+  z-index: 9;
+  text-align: center;
+  border: 8px solid white;
+  -webkit-animation-name: notepress;
+  -webkit-animation-duration: 2s;
+  animation-name: notepress;
+  animation-duration: 0.5s;
+  font-size: 20px;
+  font-weight: 800;
 }
-
-
-
 
 /*Chords */
 
@@ -173,17 +153,9 @@ box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
   border: 1px solid red;
 }
 
+button:active {
+  background: #40110f;
 
-
-
-
-button:active{
-
-background: #40110f;
-   
-    z-index: 9;
-    text-align: center;
-
+  z-index: 9;
+  text-align: center;
 }
-
-
